# native-token-transfers

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Dockerfile.anchor-base  Dockerfile.cli  Dockerfile.cli-test-evm  Dockerfile.cli-test-solana  Makefile  Move.toml  README.md  Tiltfile  bunfig.toml  deployment.json  deployments.md  eslint.config.mjs  foo.sh  jest.config.cjs  jest.config.ts  package-lock.json  package.json  tsconfig.esm.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo
solana/: .eslintrc.json  .prettierignore  Anchor.toml  Cargo.toml  Dockerfile  Makefile  README.md  jest.config.cjs  jest.config.ts  package-lock.json  package.json  solana-devnet.yaml  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
solana/fuzz/: Cargo.toml  README.md
solana/fuzz/fuzz_targets/: fuzz_rate_limit.rs  fuzz_trimmed_amount.rs
solana/fuzz/src/: Cargo.toml  README.md  afl.rs  fuzz_rate_limit.rs  fuzz_trimmed_amount.rs
solana/modules/ntt-messages/: Cargo.toml
solana/modules/ntt-messages/src/: ntt_manager.rs  transceiver.rs
solana/programs/dummy-transfer-hook/: Cargo.toml
solana/programs/dummy-transfer-hook/src/: lib.rs
solana/programs/example-native-token-transfers/: Cargo.toml
solana/programs/example-native-token-transfers/src/: config.rs  error.rs  lib.rs  messages.rs  pending_token_authority.rs  spl_multisig.rs  wormhole_accounts.rs
solana/programs/example-native-token-transfers/src/instructions/: admin.rs  cancel_outbound_transfer.rs  initialize.rs  luts.rs  mark_outbox_item_as_released.rs  mod.rs  redeem.rs  release_inbound.rs  set_rate_limit_duration.rs  transfer.rs
solana/programs/example-native-token-transfers/src/queue/: inbox.rs  outbox.rs  rate_limit.rs
solana/programs/example-native-token-transfers/tests/: admin.rs  broadcast.rs  cancel_flow.rs  governance.rs  receive.rs  transfer.rs
solana/programs/example-native-token-transfers/tests/common/: account_json_utils.rs  setup.rs  submit.rs  utils.rs
solana/programs/example-native-token-transfers/tests/sdk/: accounts.rs  mod.rs  wormhole_accounts.rs
solana/programs/native-token-transfers/: Cargo.toml
solana/programs/native-token-transfers/src/: bitmap.rs  lib.rs
solana/programs/native-token-transfers/src/instructions/: mark_outbox_item_as_released.rs
solana/programs/native-token-transfers/src/queue/: inbox.rs  outbox.rs
solana/programs/native-token-transfers/tests/: admin.rs  broadcast.rs  cancel_flow.rs  governance.rs  transfer.rs
solana/programs/native-token-transfers/tests/common/: setup.rs
solana/programs/native-token-transfers/tests/sdk/: accounts.rs
solana/programs/ntt-quoter/: Cargo.toml
solana/programs/ntt-quoter/src/: lib.rs
solana/programs/ntt-quoter/src/processor/: request_relay.rs
solana/programs/ntt-transceiver/: Cargo.toml
solana/programs/ntt-transceiver/src/: lib.rs  vaa_body.rs
solana/programs/ntt-transceiver/src/wormhole/: accounts.rs
solana/programs/ntt-transceiver/src/wormhole/instructions/: admin.rs  (+6 more)
solana/programs/ntt-transceiver/tests/: admin.rs  broadcast.rs  cancel_flow.rs  receive.rs  transfer.rs
solana/programs/ntt-transceiver/tests/common/: setup.rs  utils.rs
solana/programs/wormhole-governance/: Cargo.toml  README.md
solana/programs/wormhole-governance/src/: env.rs  lib.rs
solana/programs/wormhole-governance/src/instructions/: governance.rs
solana/scripts/: regenerateIdl.ts  run-ts-tests
solana/tests/: anchor.test.ts
solana/tests/anchor/: anchor.test.ts  multi_instance.test.ts  upgrade_authority_decoupling.test.ts
solana/tests/anchor/utils/: helpers.ts
solana/tests/cargo/: Cargo.toml
solana/tests/cargo/src/: lib.rs
solana/tests/cargo/src/common/: fixtures.rs  mod.rs
solana/tests/cargo/src/helpers/: admin.rs  mod.rs  post_message_shim.rs  post_vaa.rs  queue.rs  rate_limit.rs  receive_message.rs  redeem.rs  setup.rs  transfer.rs
solana/tests/utils/: helpers.ts
solana/ts/: README.md
solana/ts-scripts/: .env.sample  package.json  tsconfig.json
solana/ts-scripts/config/devnet/: governance-vaa.json  programs.json
solana/ts-scripts/config/mainnet/: governance-vaas-june-05.json
solana/ts-scripts/src/: env.ts  env_short.ts  executeGovernanceVaa.ts  executeGovernanceVaa_short.ts  executeGovernanceVaas.ts  governance.ts  helpers.ts  setUpTestnet.ts
solana/ts/idl/2_0_0/json/: example_native_token_transfers.json
solana/ts/idl/2_0_0/ts/: example_native_token_transfers.ts
solana/ts/idl/3_0_0/json/: example_native_token_transfers.json  native_token_transfers.json  ntt_transceiver.json
solana/ts/idl/3_0_0/ts/: example_native_token_transfers.ts  native_token_transfers.ts  ntt_transceiver.ts  ntt_transceiver_legacy.ts
solana/ts/idl/4_0_0/json/: dummy_transfer_hook.json  example_native_token_transfers.json  ntt_quoter.json  ntt_transceiver.json  wormhole_governance.json
solana/ts/idl/4_0_0/ts/: dummy_transfer_hook.ts  example_native_token_transfers.ts  ntt_quoter.ts  ntt_transceiver.ts  wormhole_governance.ts
solana/ts/idl/wormhole_shim/json/: wormhole_post_message_shim.json  wormhole_verify_vaa_shim.json
solana/ts/idl/wormhole_shim/ts/: wormhole_post_message_shim.ts  wormhole_verify_vaa_shim.ts
solana/ts/lib/: bindings.ts  index.ts  ntt.ts  quoter.ts  utils.ts
solana/ts/lib/anchor-idl/: 1_0_0.ts  2_0_0.ts  3_0_0.ts  4_0_0.ts  index.ts
solana/ts/scripts/: claimOwnership.ts  configureInboundLimits.ts  configureQuoter.ts  createSplToken.ts  env.ts  env_short.ts  executeGonvernanceVaas.ts  executeGovernanceVaa.ts  executeGovernanceVaa_short.ts  executeGovernanceVaas.ts  governance.ts  helpers.ts  initializeNtt.ts  initializeQuoter.ts  mintTokens.ts  quoteSpecialRelays.ts  readManagerConfiguration.ts  registerManagers.ts  registerPeers.ts  setUpTestnet.ts  transferOwnershipToGov.ts  updateOutboundLimit.ts
solana/ts/scripts/config/devnet/: governance-vaa.json  programs.json  quoter.json
solana/ts/scripts/config/mainnet/: governance-vaas-june-05.json  ntt.json  programs.json  quoter.json
solana/ts/sdk/: governance.ts  index.ts  ntt.ts  nttWithExecutor.ts  quoter.ts  side-effects.ts
(+575 files in other folders)
