[workspace]
members = [
    "programs/*",
    "modules/*"
]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"

# Lints to improve security
[workspace.lints.clippy]
# TODO enable the commented rules below
cast_possible_truncation = "deny"
# cast_lossless= "deny"
# as_conversions = "deny"
# arithmetic_side_effects = "deny"
# TODO: These rules should probably be enabled. Expect and unwrap are used in some traits and signal that something
# has gone wrong with the program.
# expect_used = "deny"
# unwrap_used = "deny"
integer_division = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
unchecked_duration_subtraction = "deny"
or_fun_call = "deny"
panicking_overflow_checks = "deny"
modulo_one = "deny"
manual_slice_size_calculation = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
large_futures = "deny"
recursive_format_impl = "deny"
eq_op = "deny"
lossy_float_literal = "deny"
float_cmp = "deny"
panic = "deny"
todo = "deny"
out_of_bounds_indexing = "deny"
unreachable = "deny"
cast_abs_to_unsigned = "deny"

[workspace.dependencies]
wormhole-io = "0.1.3"
wormhole-solana-utils = { git = "https://github.com/wormholelabs-xyz/wormhole-sdk-rs", branch = "main" }

anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "=2.1.0"
solana-program-runtime = "=2.1.0"
solana-program-test = "=2.1.0"
solana-address-lookup-table-program = "=2.1.0"
spl-token = "4.0.0"
spl-token-2022 = "3.0.2"

wormhole-anchor-sdk = { version = "0.31.0", git = "https://github.com/wormhole-foundation/wormhole-scaffolding", rev = "3be80a92579b108b5d6fffe234c6e18322e2c3b6", default-features = false}
wormhole-sdk = { git = "https://github.com/wormhole-foundation/wormhole", rev = "eee4641" }
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", rev = "eee4641" }

hex = "0.4.3"
cfg-if = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
