[package]
name = "ntt-fuzz"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "fuzz-trimmed-amount"
path = "fuzz_trimmed_amount.rs"
[[bin]]
name = "fuzz-rate-limit-state"
path = "fuzz_rate_limit.rs"

[dependencies]
ntt-messages = { path = "../../modules/ntt-messages" }
example-native-token-transfers = { path = "../../programs/example-native-token-transfers" }
libc = "0.2"
rustc_version = "0.4"
xdg = "3.0"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[workspace]
