[package]
name = "ntt-messages"
version = "3.0.0"
edition = "2021"

[features]
default = [ "wormhole" ]
wormhole = []
hash = [ "anchor-lang" ]
anchor = [ "anchor-lang" ]

[lints]
workspace = true

[dependencies]
anchor-lang = { workspace = true, optional = true }
wormhole-io.workspace = true

[dev-dependencies]

hex.workspace = true
