[package]
name = "ntt-transceiver"
version = "3.0.0"
description = "Example implementation of native token transfer transceiver using Wormhole Post Message Shim and Verify VAA Shim"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ntt_transceiver"

[features]
default = ["mainnet"]
no-entrypoint = ["example-native-token-transfers/no-entrypoint"]
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "example-native-token-transfers/cpi"]
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "example-native-token-transfers/idl-build",
  "wormhole-anchor-sdk/mainnet" # TODO: is this kosher? builds idl without passing on our feature flags
]
wormhole-transceiver = ["example-native-token-transfers/cpi"]
transceiver-type-from-env = []
# cargo-test-sbf will pass this along
test-sbf = []
# only enable for tests
testing = []
# networks
mainnet = [ "wormhole-transceiver", "wormhole-anchor-sdk/mainnet", "example-native-token-transfers/mainnet" ]
bridge-address-from-env = [ "wormhole-anchor-sdk/bridge-address-from-env", "wormhole-svm-definitions/from-env", "example-native-token-transfers/bridge-address-from-env" ]
solana-devnet = [ "wormhole-transceiver", "wormhole-anchor-sdk/solana-devnet", "wormhole-svm-definitions/testnet", "example-native-token-transfers/solana-devnet" ]
tilt-devnet = [ "wormhole-transceiver", "wormhole-anchor-sdk/tilt-devnet", "wormhole-svm-definitions/localnet", "example-native-token-transfers/tilt-devnet" ]
tilt-devnet2 = [ "wormhole-transceiver", "tilt-devnet", "wormhole-svm-definitions/localnet", "example-native-token-transfers/tilt-devnet2" ]

[lints]
workspace = true

[dependencies]
ntt-messages = { path = "../../modules/ntt-messages", features = ["anchor", "hash"] }
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true
wormhole-post-message-shim-interface = { git = "https://github.com/wormhole-foundation/wormhole", branch = "svm/anchor-v0.29.0-shim-interface", features = ["no-entrypoint", "cpi"] }
wormhole-verify-vaa-shim-interface = { git = "https://github.com/wormhole-foundation/wormhole", branch = "svm/anchor-v0.29.0-shim-interface", features = ["no-entrypoint", "cpi"] }
wormhole-svm-definitions = { git = "https://github.com/wormholelabs-xyz/wormhole", branch = "svm-shims-fr-env-addr" }
cfg-if = "1.0.0"

wormhole-anchor-sdk.workspace = true
wormhole-io.workspace = true
wormhole-sdk.workspace = true

example-native-token-transfers = { path = "../example-native-token-transfers", default-features = false }

[dev-dependencies]
hex.workspace = true
wormhole-solana-utils.workspace = true
wormhole-governance = { path = "../wormhole-governance", features = ["no-entrypoint"] }
wormhole-svm-shim = { git = "https://github.com/wormhole-foundation/wormhole", branch = "svm/anchor-v0.29.0-shim-interface" }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
solana-program-test.workspace = true
solana-banks-interface.workspace = true
serde_json = "1.0.113"
serde = "1.0.196"
base64 = "0.21.7"
solana-sdk = "*"
spl-token = "4"
spl-associated-token-account = { version = "3.0.0", features = ["no-entrypoint"] }
sha3 = "0.10.4"
wormhole-raw-vaas = "0.2.0-alpha.2"
libsecp256k1 = "=0.6.0"
wormhole-sdk.workspace = true
serde_wormhole.workspace = true
solana-program-runtime.workspace = true
bincode = "1.3.3"
