[package]
name = "wormhole-governance"
version = "3.0.0"
description = "Governance for programs controlled by Wormhole Guardians"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_governance"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build",
  "wormhole-anchor-sdk/idl-build",
  "wormhole-anchor-sdk/no-custom-discriminator",
  "wormhole-anchor-sdk/mainnet",
]

bridge-address-from-env = [ "wormhole-anchor-sdk/from-env" ]
mainnet = [ "wormhole-anchor-sdk/mainnet" ]
solana-devnet = [ "wormhole-anchor-sdk/solana-devnet" ]
tilt-devnet = [ "wormhole-anchor-sdk/tilt-devnet" ]
tilt-devnet2 = [ "tilt-devnet" ]

[lints]
workspace = true

[dependencies]
anchor-lang.workspace = true
solana-program.workspace = true

wormhole-anchor-sdk.workspace = true
wormhole-io.workspace = true
wormhole-sdk.workspace = true

[dev-dependencies]
hex.workspace = true
